re PR target/38062 (FAIL: gfortran.dg/include_2.f90  -O  (test for excess errors): error: stray '#' in program)

PR target/38062
	Backport from mainline:
	2008-04-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* collect2.c (write_c_file): Don't wrap in "#ifdef __cplusplus".

From-SVN: r142755